--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -1,11 +1,11 @@
 [core]
 executor = CeleryExecutor
-sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@localhost:5432/airflow
+sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@13.209.84.68:5432/airflow
 fernet_key = ''
 
 [celery]
-broker_url = redis://localhost:6379/0
-result_backend = db+postgresql://airflow:airflow@localhost:5432/airflow
+broker_url = redis://13.209.84.68:6379/0
+result_backend = db+postgresql://airflow:airflow@13.209.84.68:5432/airflow
 
 [webserver]
 secret_key = temporary_key
